syntax = "proto3";

package proto.server_config;

message ServerConfig {
  string client_path = 1;
}